--- a/src/index.css
+++ b/src/index.css
@@ -65,9 +65,7 @@ form .submit {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  gap: 1.5em;
 }
 
 .results-container .result {
@@ -142,5 +140,22 @@ form .submit {
   cursor: pointer;
   font-size: 1rem;
   margin-top: 2em;
+}
+
+.loading {
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.loading .spinner {
+  width: 50px;
 }
 /*# sourceMappingURL=index.css.map */
