--- a/src/index.scss
+++ b/src/index.scss
@@ -46,7 +46,8 @@ form {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content: space-between;
+  gap: 1.5em;
+  //justify-content: space-between;
 
   .result {
     margin-bottom: 1em;
@@ -110,5 +111,16 @@ form {
       font-size: 1rem;
       margin-top: 2em;
     }
+  }
+}
+
+.loading {
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .spinner {
+    width: 50px;
   }
 }
